Changelog for Mojolicious-Plugin-AutoReload

{{ $NEXT }}

0.007     2019-10-01 23:07:21-05:00 America/Chicago

    [Fixed]

    - Fixed the WebSocket connect URL when viewing the site through
      HTTPS. Thanks @RobertDeRose! [Github #3]

0.006     2019-09-04 18:21:21-05:00 America/Chicago

    [Fixed]

    - Fixed the plugin to work when other template engines are being
      used as the default. Thanks @zeeshanmuhammad! [Github #1 #2]

0.005     2019-08-21 18:16:51-05:00 America/Chicago

    [Fixed]

    - Fixed fatal error when adding autoreload to a page containing HTML
      entities that point to multi-byte characters.

            Mojo::Reactor::Poll: I/O watcher failed: Wide character in
            subroutine entry

      The plugin also no longer needs to parse the page DOM, so it
      should be faster.

0.004     2018-12-31 21:14:53-06:00 America/Chicago

    [Added]

    - Added hook to automatically add auto-reload script to the page.
      Now the only thing a user has to do to use this plugin is add it.

0.003     2018-11-03 16:32:28-05:00 America/Chicago

    [Fixed]

    - Fixed server ping only happening once, causing more inactivity
      timeouts
    - Increased interval between client pings, since they aren't being
      actually used for anything except keeping the connection alive

0.002     2018-11-03 15:39:50-05:00 America/Chicago

    [Fixed]

    - Increased inactivity timeout to reduce spurious log messages and
      reconnections
    - Wait one second before reloading to give the server some time to
      restart

0.001     2018-03-18 15:49:51-05:00 America/Chicago

    Initial Release